--- a/src/CSS/App.css
+++ b/src/CSS/App.css
@@ -1,5 +1,6 @@
 @import './variables.css';
 @import './buttons.css';
+@import './pagination.css';
 
 .App {
   text-align: center;
@@ -23,7 +24,8 @@
 
 .navigation {
   display: flex;
-  margin-left: calc(10px + 3vmin);
+  margin-left: calc(10px + 5vmin);
+  margin-right: calc(10px + 5vmin);
   gap: 15px;
 }
 
@@ -31,7 +33,7 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  margin: calc(10px + 3vmin);
+  margin: 3vmin calc(10px + 3vmin) 1vmin;
   border: solid 3px var(--secondary-color);
   border-radius: 10px;
   color: var(--text-color);
@@ -62,7 +64,6 @@
 @media (max-width: 500px) {
   .navigation{
     flex-direction: column;
-    margin-right: calc(10px + 3vmin);
   }
 }
 
