--- a/src/CSS/App.css
+++ b/src/CSS/App.css
@@ -40,15 +40,22 @@
 }
 
 .row {
-  width: 100%;
   margin: 0;
-  border-bottom: solid 1px var(--secondary-color);
 }
 
 .item {
-  padding: 0px calc(10px + 3vmin) 12px calc(10px + 3vmin);
+  width: 100%;
   text-align: left;
   word-wrap: break-word;
+  border-bottom: solid 1px var(--secondary-color);
+}
+
+.item > h3 {
+  margin-left: calc(10px + 3vmin);
+}
+
+.item > p {
+  margin-left: calc(10px + 3vmin);
 }
 
 .country-title {
