--- a/src/CSS/buttons.css
+++ b/src/CSS/buttons.css
@@ -1,3 +1,12 @@
+.btn{
+    text-transform: capitalize;
+    color: #fff;
+    border: none;
+    border-radius: 5rem;
+    cursor: pointer;
+}
+
+
 .all-countries {
     width: 30vw;
     min-width: 500px;
@@ -5,24 +14,15 @@
     padding: 1rem 1rem;
     font-size: 1.2rem;
     letter-spacing: .07rem;
-    color: #fff;
-    text-decoration: none;
-    text-transform: capitalize;
     background-image: linear-gradient(to right, var(--primary-color), #3c6b97);
-    border-radius: 5rem;
-    border: none;
+
 }
 
-.btn {
+.btn-primary {
     font-size: 0.9rem;
     padding: 0.5rem 0.75rem;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    text-transform: capitalize;
-    color: #fff;
-    border: none;
-    border-radius: 5rem;
     background-image: linear-gradient(to right, var(--primary-color), #3c6b97);
-    cursor: pointer;
 }
 
 
@@ -39,7 +39,7 @@
     margin-top: 4px;
 }
 
-button:hover {
+.btn:hover {
     background-image: none;
     background-color: var(--primary-color);
    
