--- a/src/CSS/pagination.css
+++ b/src/CSS/pagination.css
@@ -14,10 +14,10 @@
     min-width: 32px;
     height: 2rem;
     background-image: linear-gradient(to right, var(--secondary-color), #65673a);
-    color: #fff;
     font-size: 0.9rem;
     line-height: 2rem;
     text-align: center;
+    color: #fff;
     border-radius: 1rem;
     cursor: pointer;
 }
@@ -34,6 +34,12 @@
     min-width: 38px;
     padding-left: 8px;
     padding-right: 8px;
+}
+
+.pagination > li > a {
+    display: block;
+    width: 100%;
+    height:100%;
 }
 
 .pagination .break {
