--- a/src/CSS/buttons.css
+++ b/src/CSS/buttons.css
@@ -6,32 +6,20 @@
     cursor: pointer;
 }
 
-
-.all-countries {
-    width: 30vw;
-    min-width: 500px;
-    margin: 3vmin calc(10px + 5vmin);
-    padding: 1rem 1rem;
-    font-size: 1.2rem;
-    letter-spacing: .07rem;
-    background-image: linear-gradient(to right, var(--primary-color), #3c6b97);
-
-}
-
 .btn-primary {
     font-size: 0.9rem;
-    padding: 0.5rem 0.75rem;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-image: linear-gradient(to right, var(--primary-color), #3c6b97);
+    padding: 0.5rem 1.2rem;
+    font-family: 'Montserrat', sans-serif;
+    background-image: linear-gradient(to right, var(--secondary-color), #65673a);
 }
 
 
 .btn-secondary {
     margin-left: auto;
-    padding: .5rem 1rem;
+    padding: .5rem 3rem;
     border-radius: 10rem;
     background-image: linear-gradient(to right, var(--secondary-color), #65673a);
-    transform: translateY(85%);
+    /* transform: translateY(85%); */
 }
 
 .az {
@@ -41,7 +29,7 @@
 
 .btn:hover {
     background-image: none;
-    background-color: var(--primary-color);
+    background-color: var(--secondary-color);
    
 }
 
