--- a/src/CSS/pagination.css
+++ b/src/CSS/pagination.css
@@ -9,37 +9,30 @@
     list-style-type: none;
 }
 
-.pagination > li {
-    width: 2rem;
+.pagination-row {
+    display: flex;
+    flex-direction: row;
+    list-style-type: none;
+    gap: 5px;
+}
+
+.pagination > ul > li {
+    width: 3rem;
     min-width: 32px;
-    height: 2rem;
+    height: 3rem;
     background-image: linear-gradient(to right, var(--secondary-color), #65673a);
-    font-size: 0.9rem;
-    line-height: 2rem;
+    font-size: 1.2rem;
+    line-height: 3rem;
     text-align: center;
-    color: #fff;
-    border-radius: 1rem;
+    border-radius: 1.5rem;
     cursor: pointer;
 }
 
-.pagination > li:first-of-type{
-    width: auto;
-    min-width: 56px;
-    padding-left: 8px;
-    padding-right: 8px;
-}
-
-.pagination > li:last-of-type{
-    width: auto;
-    min-width: 38px;
-    padding-left: 8px;
-    padding-right: 8px;
-}
-
-.pagination > li > a {
-    display: block;
+.page-number {
     width: 100%;
     height:100%;
+    color: #fff;
+    text-decoration: none;
 }
 
 .pagination .break {
