--- a/src/CSS/pagination.css
+++ b/src/CSS/pagination.css
@@ -2,7 +2,6 @@
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
-    gap: 2px;
     padding: 0;
     margin-left: calc(10px + 4vmin);
     margin-right: calc(10px + 4vmin);
@@ -14,9 +13,17 @@
     flex-direction: row;
     list-style-type: none;
     gap: 5px;
+    padding: 0px;
 }
 
-.pagination > ul > li {
+.page-numbers {
+    display: flex;
+    flex-direction: row;
+    gap: 5px;
+    padding: 0px;
+}
+
+.page-numbers > li {
     width: 3rem;
     min-width: 32px;
     height: 3rem;
@@ -24,25 +31,72 @@
     font-size: 1.2rem;
     line-height: 3rem;
     text-align: center;
+    color: #fff;
     border-radius: 1.5rem;
     cursor: pointer;
 }
 
-.page-number {
-    width: 100%;
-    height:100%;
-    color: #fff;
-    text-decoration: none;
-}
-
-.pagination .break {
-    border: none;
-    background-image: none;
-    color: var(--text-color)
-}
-
-
-.pagination > li:hover {
+.page-numbers > li:hover {
     background-image: none;
     background-color: var(--secondary-color);
+}
+
+.page-numbers > li.active {
+    background-image: none;
+    background-color: #fff;
+    border: solid 1px#65673a;
+    color: #65673a;
+}
+
+.prev-next {
+    width: 75px;
+    padding: 0px 15px;
+    height: 3rem;
+    background-image: linear-gradient(to right, var(--secondary-color), #65673a);
+    font-size: 1.2rem;
+    line-height: 3rem;
+    text-align: center;
+    font-family: 'Montserrat', sans-serif;
+    color: #fff;
+    border-radius: 1.5rem;
+    border: none;
+    cursor: pointer;
+}
+
+.prev-next:hover {
+    background-image: none;
+    background-color: #fff;
+    border: solid 1px#65673a;
+    color: #65673a;
+}
+
+@media (max-width: 620px) {
+    .page-numbers > li {
+            width: 2rem;
+            min-width: 32px;
+            height: 2rem;
+            font-size: 0.8rem;
+            line-height: 2rem;
+            border-radius: 1rem;
+        }
+    .page-numbers > li.active {
+        border: solid 0.5px#65673a;
+    }
+    .prev-next {
+        width: 50px;
+        padding: 0px 10px;
+        height: 2rem;
+        font-size: 0.8rem;
+        line-height: 2rem;
+        border-radius: 1rem;
+    }
+    .prev-next:hover {
+        border: solid 0.5px#65673a;
+    }
+}
+
+@media (max-width: 440px) {
+    .prev-next {
+        display: none;
+    }
 }
